--- a/index.html
+++ b/index.html
@@ -389,23 +389,26 @@
                 <div class="col-md-5">
                     <img src="images/TEmNGUXUwf8.jpg" style="max-width: 100%; height: 800px">
                 </div>
-                    <div class="col-md-7">
+                    <div class="col-md-7" style="margin-bottom: 30px;">
                         <h3>Review by Joseph L. in Columbia, SC</h3>
                         <h4 style="color: #00A8FF">Project: Clean Gutters and Downspouts</h4>
                         <h4>Came in on time and was thorough and quick cleaning out our very neglected gutters. Cleaned up afterwards as well, there was no indication
                             he was ever here! Would definitely call again.</h4>
                     </div>
-                    <div class="col-md-7">
+                    <br>
+                    <div class="col-md-7" style="margin-bottom: 30px;">
                         <h3>Review by J D. in Lugoff, SC</h3>
                         <h4 style="color: #00A8FF">Project: Powerwash Exterior Surfaces</h4>
                         <h4>Christopher spent time listening to what I wanted the finished project to look like & exceeded my expectations! I have already scheduled him to a visit in May after pollen
                             season-my house exterior sparkles for the up coming holidays. Thanks Christopher!</h4>
                     </div>
-                    <div class="col-md-7">
+                    <br>
+                    <div class="col-md-7" style="margin-bottom: 30px;">
                         <h3>Review by Sharon H. in Columbia, SC</h3>
                         <h4 style="color: #00A8FF">Project: Powerwash Exterior Surfaces</h4>
                         <h4>I was very pleased with the results on my house and driveway. Mr. Floyd even went on my roof and cleaned the rust and mildew off of my chimney. My neighbor also decided to hire him.</h4>
                     </div>
+
                     <div class="col-md-7">
                         <h3>Review by Richard B. in Columbia, SC</h3>
                         <h4 style="color: #00A8FF">Project: Mow Grass and Maintain Landscaping</h4>
