--- a/service-2.html
+++ b/service-2.html
@@ -222,7 +222,7 @@
                                 <ul>
                                     <li><a href="#" data-filter="*"><i class="fa fa-filter"></i> All Projects</a></li>
                                     <li><a href="#" data-filter=".cat1">Commercial exterior cleaning</a></li>
-                                    <li><a href="#" data-filter=".cat2">Concretestone cleaning</a></li>
+                                    <li><a href="#" data-filter=".cat2">Concrete/stone cleaning</a></li>
                                     <li><a href="#" data-filter=".cat3">Efflorescence removal</a></li>
                                     <li><a href="#" data-filter=".cat4">Exterior window cleaning</a></li>
                                     <li><a href="#" data-filter=".cat5">Gutter cleaning</a></li>
@@ -1076,14 +1076,13 @@
                 <div class="general-title text-center">
                     <h4>MAKE AN Appointment TODAY</h4>
                     <hr>
-                    <p>Let's see all our awesome services with custom style Sed do eiusmod tempor incididunt<br>
-                    ut labore et dolore magna aliqua.</p>
+
                 </div><!-- end general title -->
 
                 <div class="row module-wrapper text-center twocol">
                     <div class="col-md-12">
                         <div class="appoform-wrapper noborder">
-                            <form method="post">
+                            <form method="post" id="my_form2">
                                 <fieldset class="row-fluid appoform">
                                     <div class="col-md-12">
                                         <label class="sr-only">Appointment time</label>
@@ -1099,11 +1098,13 @@
                                         <input type="email" placeholder="Email address *" class="form-control">
 
                                         <label class="sr-only">Select Construction Workers</label>
+                                        <!--
                                         <select class="selectpicker form-control" data-style="btn-white">
                                             <option value="12">-- Construction Workers --</option>
                                             <option value="amanda">Amanda JOE</option>
                                             <option value="mark">Mark DOE</option>
                                         </select>
+                                        -->
 
                                         <label class="sr-only">Select Service</label>
                                         <select class="selectpicker form-control" data-style="btn-white">
