--- a/about-2.html
+++ b/about-2.html
@@ -208,7 +208,7 @@
                     <div class="container-full">
                         <div class="general-title text-center">
                             <h4>What We Offer</h4>
-                            <p class="lead">We offer more than 12 different types of services, but the most popular are:</p>
+                            <p>We offer more than 12 different types of services, but the most popular are:</p>
                             <hr>
                         </div><!-- end general title -->
 
