--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                             </div> 
 
                             <div class="pitem entry item-w2 item-h2 cat1">
-                                <img src="images/gutter_cleaning_new.jpg" alt="" class="img-responsive">
+                                <img src="images/gutter_cleaning_new.jpg" alt="" class="img-responsive" style="height: 550px; width: 100%;  ">
                                 <div class="magnifier">
                                     <div class="buttons">
                                         <a data-rel="prettyPhoto" href="images/gutter_cleaning_new.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
