--- a/service-2.html
+++ b/service-2.html
@@ -1107,12 +1107,22 @@
                                         -->
 
                                         <label class="sr-only">Select Service</label>
-                                        <select class="selectpicker form-control" data-style="btn-white">
+                                        <select class="selectpicker form-control" name="service" data-style="btn-white">
                                             <option value="12">-- Select Service --</option>
-                                            <option value="12">Construction Watering</option>
-                                            <option value="13">Construction Landscape</option>
-                                            <option value="15">Construction Fence</option>
-                                            <option value="14">Construction Supplies</option>
+                                            <option value="12">Low Pressure Housewashing</option>
+                                            <option value="12">Gutter Cleaning</option>
+                                            <option value="12">Vinal Siding Oxidation Restoration</option>
+                                            <option value="13">Low Pressure Pool Deck Cleaning</option>
+                                            <option value="15">Paever Restoration</option>
+                                            <option value="14">Low Pressure Wood Restoration</option>
+                                            <option value="12">Gutter Cleaning</option>
+                                            <option value="13">Commercial Exterior Cleaning</option>
+                                            <option value="15">Exterior Window Cleaning</option>
+                                            <option value="14">Low Pressure Brick Cleaning</option>
+                                            <option value="12">Concrete & Stone cleaning</option>
+                                            <option value="13">Efflorescence Removal</option>
+                                            <option value="15">Lawn Care Maintenance</option>
+                                            <option value="14"></option>
                                         </select>
                                         <textarea placeholder="Add extra notes" class="form-control"> 
                                         </textarea>
