--- a/about-2.html
+++ b/about-2.html
@@ -112,7 +112,7 @@
             <div class="container-full">
                 <div class="general-title text-center">
                     <h4>About Us</h4>
-                    <hr>
+                    <hr style="margin-top: 10px;">
                     <!-- <p class="lead">Let's see all our awesome services with tabbed style Sed do eiusmod tempor incididunt<br>
                     ut labore et dolore magna aliqua.</p> -->
                 </div>
@@ -171,7 +171,7 @@
             <div class="container-full">
                 <div class="general-title text-center">
                     <h4>Our Founder</h4>
-                    <hr>
+                    <hr style="margin-top: 10px;">
                 </div><!-- end general title -->
 
                 <div class="row text-center">
@@ -209,7 +209,7 @@
                         <div class="general-title text-center">
                             <h4>What We Offer</h4>
                             <p>We offer more than 12 different types of services, but the most popular are:</p>
-                            <hr>
+                            <hr style="margin-top: 10px;">
                         </div><!-- end general title -->
 
                         <div class="row module-wrapper text-center">
@@ -257,7 +257,7 @@
             <div class="container-fluid">
                 <div class="general-title text-center">
                     <h4>Our values</h4>
-                    <hr>
+                    <hr style="margin-top: 10px;">
                     <!-- <p class="lead">Odec adesterc timeam toruatos, eam debitis sententiae examles.Cure sed homerous<br> 
                     alienum.Cu sed homero alienum lobortis</p> -->
                 </div><!-- end general title -->
@@ -295,7 +295,7 @@
             <div class="container-full">
                 <div class="general-title text-center">
                     <h4>Our Plans & Pricings</h4>
-                    <hr>
+                    <hr style="margin-top: 10px;">
                     <p class="lead">Here are the most common situations we have worked with over the last 12 years. Choose the one you which fits you most!</p>
                 </div><!-- end general title -->
 
@@ -369,7 +369,7 @@
                         <div class="general-title text-center">
                             <h4>Why Should You Trust Us?</h4>
                             <p class="lead">Over 12 years of professional experience made us top rated service providers on <a href="https://www.homeadvisor.com/rated.SceneryUpgrade.37885985.html">HomeAdvisor.com</a></p>
-                            <hr>
+                            <hr style="margin-top: 10px;">
                         </div><!-- end general title -->
                         <div class="row module-wrapper text-center">
                             <div class="col-md-4 col-sm-6 why-us">
