--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 						<div class="general-title text-center">
 							<h4>What We Offer</h4>
 							<p>We offer more than 12 different types of services, but the most popular are:</p>
-							<hr>
+							<hr style="margin-top: 0;">
 						</div><!-- end general title -->
 
 						<div class="row module-wrapper text-center">
@@ -307,7 +307,8 @@
                     <div class="container-full">
                         <div class="general-title text-center">
                             <h4>FEATURED PROJECTS</h4>
-                            <hr>
+                            <p></p>
+                            <hr style="margin-top: 0;">
                             <p>Some of our previous projects of low pressure housewashing, gutter cleaning and commercial exterior cleaning:</p>
                         </div><!-- end general title -->
 
@@ -353,7 +354,7 @@
                             </div> 
 
                             <div class="pitem entry item-w2 item-h2 cat1">
-                                <img src="images/gutter_cleaning_new.jpg" alt="" class="img-responsive" style="height: 550px; width: 100%;  ">
+                                <img src="images/gutter_cleaning_new.jpg" alt="" class="img-responsive" style="height: 550px; width: 80%;  ">
                                 <div class="magnifier">
                                     <div class="buttons">
                                         <a data-rel="prettyPhoto" href="images/gutter_cleaning_new.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
@@ -383,7 +384,7 @@
             <div class="container-full">
                 <div class="general-title text-center">
                     <h4>Client review</h4>
-                    <hr>
+                    <hr style="margin-top: 20px;">
                 </div><!-- end general title -->
                 <div class="row">
                 <div class="col-md-5">
@@ -423,7 +424,7 @@
                     <div class="general-title text-center">
                             <h4>Our Clients</h4>
                             <p>Throughout our journey, we have been blessed with the following world-recognized brands:</p>
-                            <hr>
+                            <hr style="margin-top: 0;">
                         </div><!-- end general title -->
                         <div class="row module-wrapper text-center">
                                 <div class="col-md-4 col-sm-6 why-us">
