--- a/service-2.html
+++ b/service-2.html
@@ -112,8 +112,8 @@
 					<div class="container-full">
 						<div class="general-title text-center">
 							<h4>What We Offer</h4>
-							<p class="lead">Listed below Some Awesome reasons to choose us!</p>
-							<hr style="margin-top: 10px;">
+							<p>Listed below Some Awesome reasons to choose us!</p>
+							<hr>
 						</div><!-- end general title -->
 
 						<div class="row module-wrapper text-center">
@@ -208,7 +208,7 @@
                     <div class="container-full">
                         <div class="general-title text-center">
                             <h4>Previous Projects</h4>
-                            <hr style="margin-top: 10px;">
+                            <hr style="margin-top: 20px;">
                             <p>Here you can see before and after pictures of our amazing work! Click on the filters to see our expertise in each of the services we are providing!</p>
                         </div><!-- end general title -->
 
@@ -1070,7 +1070,7 @@
             <div class="container-full">
                 <div class="general-title text-center">
                     <h4>MAKE AN Appointment TODAY</h4>
-                    <hr style="margin-top: 10px;">
+                    <hr style="margin-top: 20px;">
                 </div><!-- end general title -->
 
                 <div class="row module-wrapper text-center twocol">
