--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <title>Scenery Upgrade</title>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -420,7 +422,7 @@
             </div><!-- end container --
         </section><!-- end section -->
 
-        <section class="section white nopadbot">
+        <section class="section white nopadbot our-clients">
                 <div class="container-full">
                     <div class="general-title text-center">
                             <h4>Our Clients</h4>
@@ -428,27 +430,27 @@
                             <p>Throughout our journey, we have been blessed with the following world-recognized brands:</p>
 
                         </div><!-- end general title -->
-                        <div class="row module-wrapper text-center">
+                        <div class="row module-wrapper text-center img-block">
                                 <div class="col-md-4 col-sm-6 why-us">
-                                    <a href="#"><img style="display:block; width: 100% !important; max-width: 80%; height: 150px" src="images/applebees.png" alt=""></a>
+                                    <a href="#"><img src="images/applebees.png" alt=""></a>
                                 </div><!-- end col -->
                                 <div class="col-md-4 col-sm-6 why-us">
-                                    <a href="#"><img style="display:block; width: 100% !important; max-width: 80%; height: 150px" src="images/columbia-fireflies%20(1).jpg" alt=""></a>
+                                    <a href="#"><img src="images/columbia-fireflies%20(1).jpg" alt=""></a>
                                 </div><!-- end col -->
                                 <div class="col-md-4 col-sm-6 why-us">
-                                    <a href="#"><img style="display:block; width: 100% !important; max-width: 80%; height: 150px" src="images/postal.png" alt=""></a>
+                                    <a href="#"><img src="images/postal.png" alt=""></a>
                                 </div>
                         </div>
 
-                        <div class="row module-wrapper text-center">
+                        <div class="row module-wrapper text-center img-block">
                                 <div class="col-md-4 col-sm-6 why-us">
-                                    <a href="#"><img style="display:block; width: 100% !important; max-width: 80%; height: 150px" src="images/sonic.png" alt=""></a>
+                                    <a href="#"><img src="images/sonic.png" alt=""></a>
                                 </div><!-- end col -->
                                 <div class="col-md-4 col-sm-6 why-us">
-                                    <a href="#"><img style="display:block; width: 100% !important; max-width: 80%; height: 150px" src="images/starbucks.png" alt=""></a>
+                                    <a href="#"><img src="images/starbucks.png" alt=""></a>
                                 </div><!-- end col -->
                                 <div class="col-md-4 col-sm-6 why-us">
-                                    <a href="#"><img style="display:block; width: 100% !important; max-width: 80%; height: 150px;" src="images/university_of_sc.png" alt=""></a>
+                                    <a href="#"><img src="images/university_of_sc.png" alt=""></a>
                                 </div>
                         </div>
 
