--- a/service-2.html
+++ b/service-2.html
@@ -16,6 +16,8 @@
     <title>NEXT CONSTRUCTION | A Construction Responsive HTML5 Template</title>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -43,7 +45,7 @@
         </div>
     </div>
 
-    <div id="wrapper">
+    <div id="wrapper" class="services-page">
 
         <div class="row-offcanvas row-offcanvas-left">
             <div id="sidebar-fix" class="sidebar-offcanvas">
