--- a/single.html
+++ b/single.html
@@ -16,6 +16,8 @@
     <title>NEXT CONSTRUCTION | A Construction Responsive HTML5 Template</title>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/animate.css">
